[package]
name = "wksp"
version = "1.1.0"
authors = ["Matthew Callens <callensmatt@gmail.com>"]
edition = "2018"
exclude = ["examples/*", "tests/*"]
readme = "README.md"
license = "MIT"
keywords = ["cli", "workspaces", "workflow", "templates"]

[dependencies]
clap = "2.32.0"
ansi_term = "0.11.0"
serde = "1.0.85"
serde_json = "1.0.36"
serde_derive = "1.0.85"
dirs = "1.0.4"
open = "1.2.2"
